--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,7 +51,7 @@ test:
   commands:
     - pip check
   requires:
-    - python >={{ python_min }}
+    - python {{ python_min }}
     - pip
 
 about:
